--- a/research/model_trainer.ipynb
+++ b/research/model_trainer.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f20e8fac",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,232 @@
     "        eval_steps: 500\n",
     "        save_steps: float\n",
     "        gradient_accumulation_steps: int\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dbdad2db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.NLP_text_summarization.utils.common import read_yaml, creating_directories\n",
+    "from src.NLP_text_summarization.constants import *\n",
+    "\n",
+    "class ConfigurationManager:\n",
+    "    def __init__(self, \n",
+    "                config_file_path = CONFIG_FILE_PATH,\n",
+    "                params_path= PARAMS_FILE_PATH):\n",
+    "\n",
+    "        self.config = read_yaml(config_file_path)\n",
+    "        self.params= read_yaml(params_path)\n",
+    "        creating_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    def get_trainer_config(self) -> ModelTrainerConfig:\n",
+    "        config = self.config.model_trainer\n",
+    "        params = self.params.TrainingArguments\n",
+    "\n",
+    "        creating_directories([onfig.root_dir])\n",
+    "\n",
+    "        model_trainer_config=ModelTrainerConfig(\n",
+    "            root_dir=config.root_dir,\n",
+    "            data_path=config.data_path,\n",
+    "            model_ckpt = config.model_ckpt,\n",
+    "            num_train_epochs = params.num_train_epochs,\n",
+    "            warmup_steps = params.warmup_steps,\n",
+    "            per_device_train_batch_size = params.per_device_train_batch_size,\n",
+    "            weight_decay = params.weight_decay,\n",
+    "            logging_steps = params.logging_steps,\n",
+    "            evaluation_strategy = params.evaluation_strategy,\n",
+    "            eval_steps = params.evaluation_strategy,\n",
+    "            save_steps = params.save_steps,\n",
+    "            gradient_accumulation_steps = params.gradient_accumulation_steps\n",
+    "        )\n",
+    "        return model_trainer_config\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "56967e04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\neha.mandwal\\.vscode\\Project\\MLOps\\NLP_text_summarization\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
+    "from transformers import TrainingArguments, Trainer\n",
+    "from transformers import DataCollatorForSeq2Seq\n",
+    "import torch\n",
+    "from datasets import load_from_disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "88ff9639",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelTrainer:\n",
+    "    def __init__(self, config: ModelTrainerConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    def train(self):\n",
+    "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "        tokenizer = AutoTokenizer.from_pretrained(self.config.model_ckpt)\n",
+    "        model_pegasus = AutoModelForSeq2SeqLM.from_pretrained(self.config.model_ckpt).to(device)\n",
+    "        seq2seq_data_collator = DataCollatorForSeq2Seq(tokenizer, model=model_pegasus)\n",
+    "\n",
+    "        #loading the data\n",
+    "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
+    "\n",
+    "        trainer_args = TrainingArguments(\n",
+    "            output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=500,\n",
+    "            per_device_train_batch_size=1, per_device_eval_batch_size=1,\n",
+    "            weight_decay=0.01, logging_steps=10,\n",
+    "            evaluation_strategy='steps', eval_steps=500, save_steps=1e6,\n",
+    "            gradient_accumulation_steps=16\n",
+    "        ) \n",
+    "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
+    "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
+    "                  train_dataset=dataset_samsum_pt[\"test\"],\n",
+    "                  eval_dataset=dataset_samsum_pt[\"validation\"])\n",
+    "        \n",
+    "        trainer.train()\n",
+    "\n",
+    "        ## Save model\n",
+    "        model_pegasus.save_pretrained(os.path.join(self.config.root_dir,\"pegasus-samsum-model\"))\n",
+    "        ## Save tokenizer\n",
+    "        tokenizer.save_pretrained(os.path.join(self.config.root_dir,\"tokenizer\"))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6acea784",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting accelerate\n",
+      "  Using cached accelerate-1.10.1-py3-none-any.whl (374 kB)\n",
+      "Requirement already satisfied: numpy<3.0.0,>=1.17 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (2.3.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (25.0)\n",
+      "Requirement already satisfied: psutil in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (7.0.0)\n",
+      "Requirement already satisfied: pyyaml in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (6.0.2)\n",
+      "Requirement already satisfied: torch>=2.0.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (2.8.0)\n",
+      "Requirement already satisfied: huggingface_hub>=0.21.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (0.34.4)\n",
+      "Requirement already satisfied: safetensors>=0.4.3 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (0.6.2)\n",
+      "Requirement already satisfied: filelock in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from huggingface_hub>=0.21.0->accelerate) (3.19.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from huggingface_hub>=0.21.0->accelerate) (2025.3.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from huggingface_hub>=0.21.0->accelerate) (2.32.5)\n",
+      "Requirement already satisfied: tqdm>=4.42.1 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from huggingface_hub>=0.21.0->accelerate) (4.67.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from huggingface_hub>=0.21.0->accelerate) (4.15.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from torch>=2.0.0->accelerate) (1.14.0)\n",
+      "Requirement already satisfied: networkx in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from torch>=2.0.0->accelerate) (3.5)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from torch>=2.0.0->accelerate) (3.1.2)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from sympy>=1.13.3->torch>=2.0.0->accelerate) (1.3.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from tqdm>=4.42.1->huggingface_hub>=0.21.0->accelerate) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from jinja2->torch>=2.0.0->accelerate) (3.0.2)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from requests->huggingface_hub>=0.21.0->accelerate) (3.4.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from requests->huggingface_hub>=0.21.0->accelerate) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from requests->huggingface_hub>=0.21.0->accelerate) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from requests->huggingface_hub>=0.21.0->accelerate) (2025.8.3)\n",
+      "Installing collected packages: accelerate\n",
+      "Successfully installed accelerate-1.10.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found existing installation: transformers 4.56.1\n",
+      "Uninstalling transformers-4.56.1:\n",
+      "  Successfully uninstalled transformers-4.56.1\n",
+      "Found existing installation: accelerate 1.10.1\n",
+      "Uninstalling accelerate-1.10.1:\n",
+      "  Successfully uninstalled accelerate-1.10.1\n",
+      "Collecting transformers\n",
+      "  Using cached transformers-4.56.1-py3-none-any.whl (11.6 MB)\n",
+      "Collecting accelerate\n",
+      "  Using cached accelerate-1.10.1-py3-none-any.whl (374 kB)\n",
+      "Requirement already satisfied: filelock in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (3.19.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.34.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (0.34.4)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (2.3.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (25.0)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (6.0.2)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (2025.9.1)\n",
+      "Requirement already satisfied: requests in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (2.32.5)\n",
+      "Requirement already satisfied: tokenizers<=0.23.0,>=0.22.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (0.22.0)\n",
+      "Requirement already satisfied: safetensors>=0.4.3 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (0.6.2)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from transformers) (4.67.1)\n",
+      "Requirement already satisfied: psutil in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (7.0.0)\n",
+      "Requirement already satisfied: torch>=2.0.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from accelerate) (2.8.0)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from huggingface-hub<1.0,>=0.34.0->transformers) (2025.3.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from huggingface-hub<1.0,>=0.34.0->transformers) (4.15.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from torch>=2.0.0->accelerate) (1.14.0)\n",
+      "Requirement already satisfied: networkx in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from torch>=2.0.0->accelerate) (3.5)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from torch>=2.0.0->accelerate) (3.1.2)\n",
+      "Requirement already satisfied: colorama in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from requests->transformers) (3.4.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from requests->transformers) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from requests->transformers) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from requests->transformers) (2025.8.3)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from sympy>=1.13.3->torch>=2.0.0->accelerate) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\neha.mandwal\\.vscode\\project\\mlops\\nlp_text_summarization\\venv\\lib\\site-packages (from jinja2->torch>=2.0.0->accelerate) (3.0.2)\n",
+      "Installing collected packages: accelerate, transformers\n",
+      "Successfully installed accelerate-1.10.1 transformers-4.56.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade accelerate\n",
+    "!pip uninstall -y transformers accelerate\n",
+    "!pip install transformers accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a1ec37d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = ConfigurationManager()\n",
+    "model_trainer_config = config.get_trainer_config()\n",
+    "model_trainer = ModelTrainer(config=model_trainer_config)\n",
+    "model_trainer.train()"
    ]
   }
  ],
